# kingler

./: Cargo.toml  PKGBUILD  README.md  pokedex.json
assets/: pokemon.json  pokemon_scraping.py
completions/: _kingler  _krabby
src/: ascii.rs  cli.rs  config.rs  description.rs  error.rs  main.rs  pokemon.rs  shiny_hunting.rs  stats.rs
utility/: pokemon_scraping.py
