[package]
name = "kingler"
version = "0.4.1"
authors = ["Altair"]
description = "Print pokemon sprites in your terminal"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
keywords = ["pokemon", "terminal", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
rand = "0.8.5"
rust-embed = "8.5.0"
thiserror = "1.0.65"
chrono = "0.4.38" 

# Config
dirs = "5.0.1"
toml = "0.8.19"
clap_complete = "4.5.36"
