[package]
name = "kingler"
version = "0.5.1"
authors = ["Altair"]
description = "Print pokemon sprites in your terminal"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
keywords = ["pokemon", "terminal", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
rand = "0.9.0"
rust-embed = "8.5.0"
thiserror = "2.0.11"
chrono = "0.4.39" 

# Config
dirs = "6.0.0"
toml = "0.8.19"
clap_complete = "4.5.44"
