[package]
name = "kingler"
version = "0.6.0"
authors = ["Altair"]
description = "Print pokemon sprites in your terminal"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
keywords = ["pokemon", "terminal", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
rand = "0.9.2"
rust-embed = "8.7.2"
thiserror = "2.0.16"
chrono = "0.4.42" 

# Config
dirs = "6.0.0"
toml = "0.9.7"
clap_complete = "4.5.58"
